[package]
name = "tokio-minimal"
version = "0.1.0"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxHearnden/tokio-minimal"
description = """
A version of tokio to isolate
runtime::scheduler::multi_thread::park::Parker::shutdown
"""
[features]

default = [ "rt-multi-thread" ]

rt = []
rt-multi-thread = [
  "num_cpus",
  "rt"
]

[dependencies]

num_cpus = { version = "1.8.0", optional = true }
